// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1 1`] = `
<button
  className="button-style"
  data-testid="button"
  type="submit"
>
  save
</button>
`;

exports[`matches snapshot 2 1`] = `
<button
  className="button-style"
  data-testid="button"
  type="submit"
>
  click me plz
</button>
`;
